--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>GitHub Pages Test</title>
+    <title>GitHub Pages</title>
 </head>
 
 <body>
-    <h1>GitHub Killed my puppy</h1>
+    <h1>GitHub killed my puppy</h1>
 </body>
 
 </html>
